--- a/requirements.txt
+++ b/requirements.txt
@@ -20,9 +20,12 @@ numpy==1.26.4
 oauthlib==3.2.2
 opt-einsum==3.3.0
 packaging==23.2
+pandas==2.2.0
 protobuf==4.25.2
 pyasn1==0.5.1
 pyasn1-modules==0.3.0
+python-dateutil==2.8.2
+pytz==2024.1
 requests==2.31.0
 requests-oauthlib==1.3.1
 rsa==4.9
@@ -30,11 +33,15 @@ six==1.16.0
 tensorboard==2.15.2
 tensorboard-data-server==0.7.2
 tensorflow==2.15.0
+tensorflow-decision-forests==1.8.1
 tensorflow-estimator==2.15.0
 tensorflow-intel==2.15.0
 tensorflow-io-gcs-filesystem==0.31.0
 termcolor==2.4.0
+tf-keras==2.15.0
 typing_extensions==4.9.0
+tzdata==2024.1
 urllib3==2.2.0
 Werkzeug==3.0.1
 wrapt==1.14.1
+wurlitzer==3.0.3
