--- a/requirements.txt
+++ b/requirements.txt
@@ -1,47 +1,11 @@
-absl-py==2.1.0
-astunparse==1.6.3
-cachetools==5.3.2
-certifi==2024.2.2
-charset-normalizer==3.3.2
-flatbuffers==23.5.26
-gast==0.5.4
-google-auth==2.27.0
-google-auth-oauthlib==1.2.0
-google-pasta==0.2.0
-grpcio==1.60.1
-h5py==3.10.0
-idna==3.6
-keras==2.15.0
-libclang==16.0.6
-Markdown==3.5.2
-MarkupSafe==2.1.5
-ml-dtypes==0.2.0
-numpy==1.26.4
-oauthlib==3.2.2
-opt-einsum==3.3.0
+altgraph==0.17.4
+certifi==2023.7.22
+charset-normalizer==3.3.1
+idna==3.4
 packaging==23.2
-pandas==2.2.0
-protobuf==4.25.2
-pyasn1==0.5.1
-pyasn1-modules==0.3.0
-python-dateutil==2.8.2
-pytz==2024.1
+pefile==2023.2.7
+pyinstaller==6.2.0
+pyinstaller-hooks-contrib==2023.10
+pywin32-ctypes==0.2.2
 requests==2.31.0
-requests-oauthlib==1.3.1
-rsa==4.9
-six==1.16.0
-tensorboard==2.15.2
-tensorboard-data-server==0.7.2
-tensorflow==2.15.0
-tensorflow-decision-forests==1.8.1
-tensorflow-estimator==2.15.0
-tensorflow-intel==2.15.0
-tensorflow-io-gcs-filesystem==0.31.0
-termcolor==2.4.0
-tf-keras==2.15.0
-typing_extensions==4.9.0
-tzdata==2024.1
-urllib3==2.2.0
-Werkzeug==3.0.1
-wrapt==1.14.1
-wurlitzer==3.0.3
+urllib3==2.0.7
